# Advent-Of-Code-2021

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  Makefile  README.md  day_17_ans.txt  makefile  pyproject.toml  requirements.in  requirements.txt  setup.cfg  template.py  utils.py
.circleci/: config.yml
.github/workflows/: badges.yml
src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_20.py  day_21.py  day_22.py  timeit.py  tmp.txt  utils.py
