[project]
name = "Advent Of Code"
version = "2021"
description = "My answeres to Advent of Code"
authors = ["Ben Gosney <bengosney@googlemail.com>"]
python = "^3.10"
homepage = "https://github.com/bengosney/Advent-Of-Code-2021"
repository = "https://github.com/bengosney/Advent-Of-Code-2021"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py310']

[tool.pycln]
all = true
